[package]
name = "rust_flowmsg"
version = "0.1.0"
authors = ["Eugenio Tampieri <eugenio@eutampieri.eu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
paho-mqtt = {version = "0.9", default-features = false, features = ["bundled"]}
lolid = {version = "1", features=["osrng"]}
